# scuffed

./: .gitignore
backend/: Cargo.toml  test.db
backend/mediabox/mediabox/: Cargo.toml
backend/mediabox/mediabox/examples/: mkv.rs  rtmp_listen.rs  subs.rs
backend/mediabox/mediabox/src/: codec.rs  format.rs  io.rs  lib.rs  main.rs  media.rs
backend/mediabox/mediabox/src/codec/: ass.rs  nal.rs  webvtt.rs
backend/mediabox/mediabox/src/format/: mkv.rs  mp4.rs  rtmp.rs
backend/mmangle/: Cargo.toml
backend/mmangle/src/: codec.rs  io.rs  media.rs
backend/mmangle/src/format/: rtmp.rs
backend/scuffed/: Cargo.toml
backend/scuffed/migrations/: 0001_initial.sql
backend/scuffed/src/: error.rs  main.rs  stream.rs
backend/scuffed/templates/: account.html
frontend/: README.md  index.html  snapshot.js  style.css  todo.md
frontend-test/: index.html  stream.html  style.css
frontend/src/: main.ts
frontend/src/components/: Navigation.vue  StreamItem.vue
frontend/src/components/form/: InputSlider.vue
frontend/src/components/global/: Icon.vue
frontend/src/docs/: optimize-bandwidth.md  stream-obs.md
frontend/src/router/: index.ts
frontend/src/router/routes/: router-main.ts
frontend/src/router/views/: Account.vue  AccountPassword.vue  Docs.vue  Home.vue  Login.vue  Stream.vue  StreamList.vue
frontend/src/style/: index.scss
frontend/src/style/app/: _docs.scss  _navigation.scss  _stream.scss  _streams.scss
frontend/src/style/generic/: _animation.scss  _button.scss  _input.scss  _layout.scss  _slider.scss  _tooltip.scss  index.scss
frontend/src/style/overrides/: dark.scss  index.scss
frontend/src/style/setup/: _fonts.scss  _icons.scss  _mixins.scss  _variables.scss
frontends/dolan.tv/: .prettierrc  index.html  package-lock.json  package.json
frontends/dolan.tv/src/: App.vue
frontends/dolan.tv/src/components/form/: InputText.vue
frontends/dolan.tv/src/docs/: intro.md  stream-visibility.md
frontends/dolan.tv/src/router/guards/: afterEach.ts  beforeResolve.ts
frontends/dolan.tv/src/router/views/: DocsViewer.vue  Home.vue
frontends/dolan.tv/src/style/app/: _account.scss  _home.scss  index.scss
frontends/dolan.tv/src/style/generic/: index.scss
frontends/dolan.tv/src/style/setup/: _reset.scss
frontends/frontend-test/: index.html  stream.js
mmangle/src/: format.rs  lib.rs  span.rs
mmangle/src/codec/: nal.rs
mmangle/src/format/: mp4.rs
scuffed/: Cargo.toml
scuffed/src/: main.rs  stream.rs
server/: Cargo.toml
server/mediabox/mediabox/: Cargo.toml
server/mediabox/mediabox/src/: codec.rs  io.rs  lib.rs  main.rs  media.rs
server/mediabox/mediabox/src/codec/: ass.rs
server/mediabox/mediabox/src/format/: hls.rs  mkv.rs  mp4.rs
server/migrations/: 0001_initial.sql
server/scuffed/: Cargo.toml
server/scuffed/src/: account.rs  db.rs  live.rs  main.rs  stream.rs
server/scuffed/templates/: home.html
server/src/: account.rs  error.rs  live.rs  logging.rs  main.rs  notification.rs  stream.rs
