[package]
name = "scuffed"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.57"
axum = { version = "0.5.7", default-features = false, features = ["http1", "query"] }
bytes = "1.1.0"
dotenv = "0.15.0"
flvparse = "0.1.0"
futures = "0.3.21"
gcd = "2.1.0"
h264-reader = "0.5.0"
log = "0.4.17"
rml_rtmp = "0.6.1"
rusqlite = "0.27.0"
rusqlite_migration = { git = "https://github.com/cljoly/rusqlite_migration" }
mmangle = { path = "../mmangle" }
tokio = { version = "1", default-features = false, features = ["rt", "rt-multi-thread", "sync", "net", "io-util"] }
