[package]
name = "scuffed"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"

[dependencies]
anyhow = "1.0.57"
axum = { version = "0.6", features = ["http1", "query", "ws"] }
bytes = "1.1.0"
dotenv = "0.15.0"
futures = "0.3.21"
rusqlite = "0.27.0"
rusqlite_migration = { git = "https://github.com/cljoly/rusqlite_migration" }
mediabox = { git = "https://github.com/fkaa/mediabox", features = ["rtmp"] }
tokio = { version = "1", default-features = false, features = ["rt", "rt-multi-thread", "sync", "net", "io-util"] }
tokio-rusqlite = "0.1.0"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
thiserror = "1.0.31"
env_logger = "0.9.0"
idlib = { git = "https://github.com/Mavulp/hiveID" }
jwt = "0.16.0"
utoipa = { version = "2.4.2", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "3.0.1", features = ["axum"] }
time = "0.3.17"
rand = "0.8.5"
base64 = "0.13.1"
hyper = "0.14.23"
tower-http = { version = "0.3.5", features = ["trace"] }
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
tracing = "0.1.37"
tracing-futures = "0.2.5"
web-push = { version = "0.9.3", default-features = false, features = ["hyper-client"] }
