[package]
name = "mmangle"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.57"
bytes = "1.1.0"
flvparse = "0.1.0"
futures = "0.3.21"
nom = "7.1.1"
gcd = "2.1.0"
h264-reader = "0.5.0"
log = "0.4.17"
rml_rtmp = "0.6.1"
tokio = { version = "1", default-features = false, features = ["rt", "rt-multi-thread", "sync", "net", "io-util", "fs"] }
async-trait = "0.1.56"
thiserror = "1.0.31"
downcast = "0.11.0"

[dev-dependencies]
env_logger = "0.9.0"
console-subscriber = "0.1.6"
test-case = "2.1.0"
assert_matches = "1.5.0"
tokio = { version = "1", features = ["full"] }
