[package]
name = "scuffed"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.57"
axum = { version = "0.5.7", features = ["http1", "query", "ws"] }
bytes = "1.1.0"
dotenv = "0.15.0"
flvparse = "0.1.0"
futures = "0.3.21"
gcd = "2.1.0"
h264-reader = "0.5.0"
log = "0.4.17"
rml_rtmp = "0.6.1"
rusqlite = "0.27.0"
rusqlite_migration = { git = "https://github.com/cljoly/rusqlite_migration" }
mediabox = { path = "../mediabox/mediabox" }
tokio = { version = "1", default-features = false, features = ["rt", "rt-multi-thread", "sync", "net", "io-util"] }
tokio-rusqlite = "0.1.0"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
thiserror = "1.0.31"
tower-http = { version = "0.3.4", features = ["fs"] }
env_logger = "0.9.0"
